--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.377.0",
+    "@aws-sdk/s3-request-presigner": "^3.377.0",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
